--- a/circuit.ipynb
+++ b/circuit.ipynb
@@ -511,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In general, the output can vary does not linearly interpolate. But given two very similar input state (for example, defined by rotation angle vectors that are 90%), the observed classical bit of the output will likely be the same."
+    "In general, the output can vary does not linearly interpolate. But given two very similar input state (for example, defined by rotation angle vectors that are very similar), the observed classical bit of the output will likely be the same."
    ]
   },
   {
